Wed Oct 16 15:19:44 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkkeys-x11.c: Fix from Phil Blundell for
	compiling without Xkb. (#95909)

Wed Oct 16 14:32:43 2002  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkdrawable.h gdk/gdkdraw.c gdk/gdkpixmap.c 
	gdk/gdkwindow.c gdk/x11/gdkdrawable-x11.c
	gdk/win32/gdkdrawable-win32.c gdk/linux-fb/gdkdrawable-fb2.c
	gdk/linux-fb/gdkprivate-fb.h:
	Make 'filled' arguments for draw_arc/polygon/rectangle
	gboolean not gint. (#94976)
	
Wed Oct 16 17:11:46 2002  Soeren Sandmann  <sandmann@daimi.au.dk>

	* gtk/gtktearoffmenuitem.c (gtk_tearoff_menu_item_paint): Make
	tear-off menuitems obey the "selected_shadow_type" style property.

Tue Oct 15 17:25:47 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c (get_im): Don't use 
	connect_swapped() when the function being connected
	has a non-swapped signature.

Tue Oct 15 09:54:54 2002  Owen Taylor  <otaylor@redhat.com>

	* modules/input/gtkimcontextxim.c (get_im): Initialize
	info->ics to NULL. (Hidetoshi Tajima.)  

	* modules/input/gtkimcontextxim.c (status_window_get): 
	Call set_resizable on the window, not on the structure.

Mon Oct 14 19:17:34 2002  Owen Taylor  <otaylor@redhat.com>

	* === Released 2.1.1 ===

Mon Oct 14 18:50:59 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Version 2.1.1, interface age 0, binary age 101.

	* NEWS: Updates

Tue Oct 15 00:53:14 2002  Kristian Rietveld  <kris@gtk.org>

	Behaviour change, apply changes if the entry of the editable gets
	a focus out event (#82405).

	* gtk/gtkcellrenderertext.c (gtk_cell_renderer_text_focus_out_event):
	new function,
	(gtk_cell_renderer_text_start_editing): stop editing and apply
	changes on focus-out.

Tue Oct 15 00:47:35 2002  Kristian Rietveld  <kris@gtk.org>

	Fixes an *evil* GtkTreeModelSort bug, #93629.

	* gtk/gtktreemodel.c (release_row_references): return if the
	refs->list is NULL.

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_row_changed): if we